Layout Fix
Added margin-top to the image preview so it doesn't overlap with emoji
icon

--- a/public/css/streamerstyles.css
+++ b/public/css/streamerstyles.css
@@ -895,6 +895,10 @@ img.emoji {
 	.btn-cancel {
 		width:33.3%;
 	}
+
+	.post-img-preview {
+		margin-top: 20px;
+	}
 }
 
 @media screen and (max-width:768px) {
